[gd_scene load_steps=17 format=3 uid="uid://d20xrhbdjreun"]

[ext_resource type="Script" path="res://scripts/entities/enemy/Enemy.gd" id="1_4c23b"]
[ext_resource type="Texture2D" uid="uid://deymmaw4qgjuq" path="res://assets/sprites/enemies/test_cheese_1/cheese-sheet.png" id="1_hp1kb"]
[ext_resource type="PackedScene" uid="uid://cxjymoqn8dvxr" path="res://components/scenes/Health_Component.tscn" id="3_n25gn"]
[ext_resource type="PackedScene" uid="uid://cn7f8fv4egtsq" path="res://components/scenes/Hurtbox_Component.tscn" id="4_80d3p"]
[ext_resource type="AudioStream" uid="uid://d13f5evpunwgw" path="res://assets/audio/entities/enemies/enemy1_1.wav" id="5_xjlie"]
[ext_resource type="AudioStream" uid="uid://c08ao58xcao3h" path="res://assets/audio/weapons/guns/fart.mp3" id="6_4qv54"]
[ext_resource type="PackedScene" uid="uid://d4ab403iyuxsk" path="res://components/scenes/Attackbox_Component.tscn" id="7_3ewax"]

[sub_resource type="CapsuleShape2D" id="CapsuleShape2D_c8upc"]
radius = 7.0
height = 14.0

[sub_resource type="RectangleShape2D" id="RectangleShape2D_k7b0n"]
size = Vector2(14, 14)

[sub_resource type="Animation" id="Animation_80rd6"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2D:modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Color(1, 1, 1, 1)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("CollisionShape2D:disabled")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [false]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("AudioStreamPlayer2D:stream")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [ExtResource("5_xjlie")]
}
tracks/3/type = "value"
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/path = NodePath("AudioStreamPlayer2D:playing")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [false]
}
tracks/4/type = "value"
tracks/4/imported = false
tracks/4/enabled = true
tracks/4/path = NodePath(".:modulate")
tracks/4/interp = 1
tracks/4/loop_wrap = true
tracks/4/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Color(1, 1, 1, 0)]
}
tracks/5/type = "value"
tracks/5/imported = false
tracks/5/enabled = true
tracks/5/path = NodePath("NavigationAgent2D:process_mode")
tracks/5/interp = 1
tracks/5/loop_wrap = true
tracks/5/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [4]
}
tracks/6/type = "value"
tracks/6/imported = false
tracks/6/enabled = true
tracks/6/path = NodePath("Hurtbox_Component:monitoring")
tracks/6/interp = 1
tracks/6/loop_wrap = true
tracks/6/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [false]
}
tracks/7/type = "value"
tracks/7/imported = false
tracks/7/enabled = true
tracks/7/path = NodePath("Hurtbox_Component:monitorable")
tracks/7/interp = 1
tracks/7/loop_wrap = true
tracks/7/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [false]
}
tracks/8/type = "value"
tracks/8/imported = false
tracks/8/enabled = true
tracks/8/path = NodePath(".:active")
tracks/8/interp = 1
tracks/8/loop_wrap = true
tracks/8/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [false]
}

[sub_resource type="Animation" id="Animation_f41kl"]
resource_name = "death"
length = 0.37
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2D:modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.3),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Color(1, 1, 1, 1), Color(0.392157, 0.0588235, 0.117647, 0)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("CollisionShape2D:disabled")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0, 0.1),
"transitions": PackedFloat32Array(1, 1),
"update": 1,
"values": [false, true]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("AudioStreamPlayer2D:stream")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [ExtResource("6_4qv54")]
}
tracks/3/type = "value"
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/path = NodePath("AudioStreamPlayer2D:playing")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [true]
}

[sub_resource type="Animation" id="Animation_1wss3"]
resource_name = "spawn"
length = 0.2
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.2),
"transitions": PackedFloat32Array(1.7411, 1.7411),
"update": 0,
"values": [Color(1, 1, 1, 0), Color(1, 1, 1, 1)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("NavigationAgent2D:process_mode")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0, 0.2),
"transitions": PackedFloat32Array(1, 1),
"update": 1,
"values": [4, 0]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("CollisionShape2D:disabled")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0, 0.2),
"transitions": PackedFloat32Array(1, 1),
"update": 1,
"values": [true, false]
}
tracks/3/type = "value"
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/path = NodePath("Hurtbox_Component:monitoring")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/keys = {
"times": PackedFloat32Array(0, 0.2),
"transitions": PackedFloat32Array(1, 1),
"update": 1,
"values": [false, true]
}
tracks/4/type = "value"
tracks/4/imported = false
tracks/4/enabled = true
tracks/4/path = NodePath("Hurtbox_Component:monitorable")
tracks/4/interp = 1
tracks/4/loop_wrap = true
tracks/4/keys = {
"times": PackedFloat32Array(0, 0.2),
"transitions": PackedFloat32Array(1, 1),
"update": 1,
"values": [false, true]
}
tracks/5/type = "value"
tracks/5/imported = false
tracks/5/enabled = true
tracks/5/path = NodePath(".:active")
tracks/5/interp = 1
tracks/5/loop_wrap = true
tracks/5/keys = {
"times": PackedFloat32Array(0, 0.2),
"transitions": PackedFloat32Array(1, 1),
"update": 1,
"values": [false, true]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_q0odk"]
_data = {
"RESET": SubResource("Animation_80rd6"),
"death": SubResource("Animation_f41kl"),
"spawn": SubResource("Animation_1wss3")
}

[sub_resource type="Gradient" id="Gradient_uovxi"]
offsets = PackedFloat32Array(0.00699301, 1)
colors = PackedColorArray(0, 0.909804, 0.384314, 1, 0, 0.909804, 0.384314, 1)

[sub_resource type="GradientTexture1D" id="GradientTexture1D_2w6tt"]
gradient = SubResource("Gradient_uovxi")
width = 16

[sub_resource type="CircleShape2D" id="CircleShape2D_alp86"]
radius = 7.28011

[node name="Enemy" type="CharacterBody2D" node_paths=PackedStringArray("navigation_agent") groups=["enemy", "player_can_damage"]]
modulate = Color(1, 1, 1, 0)
z_index = 2
collision_layer = 4
collision_mask = 5
motion_mode = 1
wall_min_slide_angle = 0.0
script = ExtResource("1_4c23b")
speed = 30
navigation_agent = NodePath("NavigationAgent2D")
active = false

[node name="Sprite2D" type="Sprite2D" parent="."]
texture = ExtResource("1_hp1kb")

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2(0, -1)
shape = SubResource("CapsuleShape2D_c8upc")

[node name="NavigationAgent2D" type="NavigationAgent2D" parent="."]
process_mode = 4
path_desired_distance = 16.0
path_postprocessing = 1

[node name="Health_Component" parent="." instance=ExtResource("3_n25gn")]

[node name="Hurtbox_Component" parent="." instance=ExtResource("4_80d3p")]
monitoring = false
monitorable = false

[node name="CollisionShape2D" type="CollisionShape2D" parent="Hurtbox_Component"]
position = Vector2(0, -1)
shape = SubResource("RectangleShape2D_k7b0n")

[node name="Navigation_Timer" type="Timer" parent="."]
wait_time = 0.1
autostart = true

[node name="AudioStreamPlayer2D" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource("5_xjlie")

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
libraries = {
"": SubResource("AnimationLibrary_q0odk")
}

[node name="Health_Bar" type="TextureProgressBar" parent="."]
offset_left = -8.0
offset_top = -10.0
offset_right = 248.0
offset_bottom = 6.0
value = 100.0
rounded = true
texture_progress = SubResource("GradientTexture1D_2w6tt")

[node name="Immunity_Frames_Timer" type="Timer" parent="."]
wait_time = 0.05
one_shot = true

[node name="Attackbox_Component" parent="." instance=ExtResource("7_3ewax")]
collision_layer = 4
collision_mask = 2
monitorable = false

[node name="CollisionShape2D" type="CollisionShape2D" parent="Attackbox_Component"]
position = Vector2(0, -1)
shape = SubResource("CircleShape2D_alp86")

[node name="Attempt_Player_Damage_Timer" type="Timer" parent="."]
wait_time = 0.15

[connection signal="death" from="Health_Component" to="." method="_on_health_component_death"]
[connection signal="took_damage" from="Hurtbox_Component" to="." method="_on_hurtbox_component_took_damage"]
[connection signal="timeout" from="Navigation_Timer" to="." method="_on_navigation_timer_timeout"]
[connection signal="animation_finished" from="AnimationPlayer" to="." method="_on_animation_player_animation_finished"]
[connection signal="timeout" from="Immunity_Frames_Timer" to="." method="_on_immunity_frames_timer_timeout"]
[connection signal="area_entered" from="Attackbox_Component" to="." method="_on_attackbox_component_area_entered"]
[connection signal="area_exited" from="Attackbox_Component" to="." method="_on_attackbox_component_area_exited"]
[connection signal="timeout" from="Attempt_Player_Damage_Timer" to="." method="_on_attempt_player_damage_timer_timeout"]
